$Id: History,v 1.166 2001-11-14 14:56:31 barrand Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

14th November 2001  Guy Barrand
- OpenInventor : move HEPVis/SoWindow under vis/OpenInventor/G4SoWindow
  to prepare HEPVis/6.0. (HEPVis/SoWindow will disappear from HEPVis/6.0).

14th November 2001  John Allison
- Added README.built_in_commands.

13th November 2001  Satoshi Tanaka
- visualization/README file is updated, adding minimal description
  on the HepRepFile driver. 

12th November 2001  John Allison  (vis-V03-02-18 needs config-V03-02-09)
- Fixed some warnings and one error from gcc-2.95.2.
- HepRep Type names now come from Physical Volume names (Joseph Perl).
- Added many HepRep Attributes for other volume properties (Joseph Perl).

13th Nov 2001 (JST)  Hajime Yoshida and Minamimoto (vis-V03-02-17)
- Updation of G4RTJpegMaker.cc for Windows platform (raytracer-V03-02-01). 
