@@ -1,4 +1,4 @@
-$Id: History,v 1.166 2001-11-14 14:56:31 barrand Exp $
+$Id: History,v 1.167 2001-11-15 14:52:14 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,11 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+14th November 2001  John Allison
+- Fixed bug in G4VisManager::EndOfEvent.
+- Moved code from G4VisManagerRegisterMessengers.cc to G4VisManager.cc and
+  removed G4VisManagerRegisterMessengers.cc.
 
 14th November 2001  Guy Barrand
 - OpenInventor : move HEPVis/SoWindow under vis/OpenInventor/G4SoWindow
